--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,9 @@
 .element__image {
-    grid-column: 1/3;
-    max-width: 100%;
+    grid-area: image;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 282px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
