--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,8 +1,12 @@
-.element__title{
+.element__title {
+    margin: 0;
+    padding: 0;
+    margin-left: 21px;
+    max-width: 300px;
+    grid-area: title;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    margin-left: 21px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
