--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
     margin: 0 auto;
     padding: 0;
-    max-width: 100%;
+    max-width: 1280px;
     font-family: "Inter", "Arial", sans-serif;
     color: #FFFFFF;
     background-color: #000000;
