--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
-.popup__name {
+.popup__input {
     margin: 0;
     padding: 0;
-    padding-bottom: 13px;
+    margin-top: 30px;
     height: 27px;
     width: 100%;
     border: none;
@@ -11,4 +11,9 @@
     font-weight: 400;
     font-size: 0.875em;
     line-height: 1.2;
+}
+
+
+.popup__input:nth-child(1){
+    margin-top: 0;
 }
