--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,7 +1,16 @@
 .popup__title {
+    margin: 0;
+    padding: 0;
     margin-bottom: 54px;
     font-weight: 900;
     font-size: 1.5em;
     line-height: 1.2;
     color: #000;
+}
+
+@media screen and (max-width:425px) {
+    .popup__title {
+        font-size: 1.125em;
+        margin-bottom: 75px;
+    }
 }
