--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,3 @@
 .popup {
-    position: fixed;
-    display: flex;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: auto;
-
+    display: none;
 }
