--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,6 @@
 .profile__info {
+    margin: 0;
+    padding: 0;
     max-width: 100%;
     display: grid;
     grid-template-areas: 
@@ -11,6 +13,9 @@
 
 @media screen and (max-width: 1070px) {
     .profile__info{
+        grid-template-areas: 
+        "name button"
+        "details details";
         justify-content: center;
         column-gap: 10px;
         row-gap: 14px;
