--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,7 +2,6 @@
     grid-area: name;
     margin: 0;
     padding: 0;
-    padding-bottom: 16px;
     max-width: 580px;
     font-weight: 500;
     font-size: 2.56em;
@@ -11,6 +10,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    align-self: end;
+    margin-bottom: 16px;
 }
 
 @media screen and (max-width: 1070px) {
