--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     margin-left: 21px;
-    max-width: 300px;
     grid-area: title;
+    align-self: center;
     font-size: 24px;
     line-height: 29px;
     color: #000000;
