--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,6 +4,8 @@
     width: 100%;
     height: 361px;
     display: grid;
+    grid-template-columns: calc(100% - 40px - 20px) 1fr;
+    grid-template-rows: 282px 1fr;
     grid-template-areas:
         "image image"
         "title like";
