--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,22 +3,22 @@
     font-style:  normal;
     font-weight: 900;
     font-display: swap;
-    src: url(/fonts/Inter/Inter-Black.woff2) format("woff2"),
-         url(/fonts/Inter/Inter-Black.woff) format("woff");
+    src: url(./Inter/Inter-Black.woff2) format("woff2"),
+         url(./Inter/Inter-Black.woff) format("woff");
   }
 @font-face {
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 500;
     font-display: swap;
-    src: url(/fonts/Inter/Inter-Medium.woff2) format("woff2"),
-         url(/fonts/Inter/Inter-Medium.woff) format("woff");
+    src: url(./Inter/Inter-Medium.woff2) format("woff2"),
+         url(./Inter/Inter-Medium.woff) format("woff");
   }
 @font-face {
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 400;
     font-display: swap;
-    src: url(/fonts/Inter/Inter-Regular.woff2) format("woff2"),
-         url(/fonts/Inter/Inter-Regular.woff) format("woff");
+    src: url(./Inter/Inter-Regular.woff2) format("woff2"),
+         url(./Inter/Inter-Regular.woff) format("woff");
   }
