--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,23 +4,10 @@
     width: 100%;
     height: 361px;
     display: grid;
-    grid-template-columns: 220px 1fr;
-    grid-template-rows: 282px 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas:
         "image image"
         "title like";
     background-color: #fff;
     border-radius: 10px;
 }
-
-@media screen and (max-width:768px) {
-.element {
-    grid-template-columns: 250px 1fr;
-    }
-}
-
-@media screen and (max-width:361px) {
-    .element {
-        grid-template-columns: 190px 1fr;
-        }
-    }
