--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -15,7 +15,7 @@
 }
 
 @media screen and (max-width:350px) {
-    .element__title{
-    width:190px  
+    .element__title {
+        width: 190px;
     }
 }
