--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,7 +1,7 @@
 .popup__close-button {
     margin: 0;
     padding: 0;
-    background-image: url(../../../images/close.svg);
+    background-image: url(../../../images/close_button.svg);
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
