--- a/blocks/profile/__details/profile__details.css
+++ b/blocks/profile/__details/profile__details.css
@@ -2,7 +2,8 @@
     grid-area: details;
     margin: 0;
     padding: 0;
-    max-width: 580px;
+    display: block;
+    max-width: 336px;
     font-weight: 400;
     font-size: 1.125em;
     line-height: 1.2;
@@ -20,6 +21,7 @@
 
 @media screen and (max-width: 375px) {
     .profile__details {
+        max-width: 180px;
         font-size: 0.875em;
         line-height: 1.2;
     }
