--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -2,7 +2,7 @@
     grid-area: like;
     margin: 0 20px 0;
     padding: 0;
-    background-image: url(../../../images/heart.svg);
+    background-image: url(../../../images/like_button.svg);
     width: 22px;
     height: 19px;
     background-color: transparent;
@@ -16,5 +16,5 @@
 }
 
 .element__like-button:hover {
-    opacity: 0.6;
+    opacity: 0.5;
 }
