--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,7 @@
 .header__logo {
     margin: 0;
     padding: 0;
+    margin-top: 45px;
     max-width: 142px;
     margin-bottom: 41px;
 }
@@ -10,5 +11,6 @@
         max-width: 103px;
         padding-left: 27px;
         margin-bottom: 31px;
+        margin-top: 28px;
     }
 }
