--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,15 @@
 .popup__title {
-    margin: 0;
+    margin: 34px 36px 54px;
     padding: 0;
-    margin-bottom: 54px;
     font-weight: 900;
     font-size: 1.5em;
     line-height: 1.2;
     color: #000;
 }
 
-@media screen and (max-width:425px) {
+@media screen and (max-width:620px) {
     .popup__title {
+        margin: 25px 22px 75px;
         font-size: 1.125em;
         margin-bottom: 75px;
     }
