--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,3 +1,8 @@
 .popup {
     display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
 }
