--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     background-image: url(../../../images/add_button.svg);
-    width: 150px;
-    height: 50px;
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
-    border: 1px solid #fff;
+    background-size: 22px;
+    height: 50px;
+    border: 2px solid #fff;
+    border-radius: 2px;
     cursor: pointer;
     align-self: center;
 }
@@ -15,6 +16,7 @@
 @media screen and (max-width: 1070px) {
     .profile__add-button {
         width: 100%;
+        background-size: 16px;
     }
 }
 
