--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 10px;
     border: 1px solid #fff;
     cursor: pointer;
     align-self: end;
@@ -19,9 +20,10 @@
         margin-top: 30px;
         width: 18px;
         height: 18px;
+        background-size: 7px;
     }
 }
 
 .profile__edit-button:hover {
-    opacity: 0.6;
+    opacity: 0.5;
 }
