--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,8 +1,9 @@
 .profile__name {
     grid-area: name;
+    display: block;
     margin: 0;
     padding: 0;
-    max-width: 580px;
+    max-width: 294px;
     font-weight: 500;
     font-size: 2.56em;
     line-height: 1.14;
