--- a/pages/index.css
+++ b/pages/index.css
@@ -25,3 +25,4 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__sign/footer__sign.css);
