--- a/blocks/profile/__details/profile__details.css
+++ b/blocks/profile/__details/profile__details.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     display: block;
-    max-width: 336px;
+    max-width: 100%;
     font-weight: 400;
     font-size: 1.125em;
     line-height: 1.2;
@@ -14,15 +14,14 @@
 
 @media screen and (max-width: 1070px) {
     .profile__details {
-        margin: 0 auto 36px;
+        margin: 0 auto 37px;
         text-align: center;
+        align-content: flex-start;
     }
 }
 
 @media screen and (max-width: 375px) {
     .profile__details {
-        max-width: 180px;
         font-size: 0.875em;
-        line-height: 1.2;
     }
 }
