--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,6 +1,6 @@
 .element__like-button {
     grid-area: like;
-    margin: 0 20px 0;
+    margin-right: 30px;
     padding: 0;
     background-image: url(../../../images/like_button.svg);
     width: 22px;
