--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -3,3 +3,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width:320px) {
+    .popup__form {
+        margin: 0 22px 0;
+    }
+}
