--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,6 +1,6 @@
 .popup__save-button {
     margin: 0;
-    padding: auto;
+    padding: 0;
     margin-top: 48px;
     margin-bottom: 37px;
     background-position: center;
