--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 1070px) {
     .profile__add-button {
-        width: 100%;
+        width: 282px;
         background-size: 16px;
     }
 }
