--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,25 +3,24 @@
     display: block;
     margin: 0;
     padding: 0;
-    max-width: 294px;
+    max-width: 100%;
     font-weight: 500;
-    font-size: 2.56em;
+    font-size: 2.625em;
     line-height: 1.14;
-    align-self: end;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 16px;
 }
 
 @media screen and (max-width: 1070px) {
     .profile__name {
-        text-align: center;
+        justify-self: center;
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 425px) {
     .profile__name {
-        font-size: 1.7em;
+        font-size: 1.68em;
+        line-height: 1.2;
     }
 }
