--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,17 +3,21 @@
     padding: 0;
     max-width: 100%;
     display: grid;
-    grid-template-columns: 150px 1fr 150px;
+    grid-template-columns: 120px 1fr 150px;
+    gap:28px;
 }
 
 @media screen and (max-width: 1070px) {
     .profile {
+        margin: 0 110px 47px;
         display: flex;
         flex-direction: column;
+        grid-template-columns: none;
+        gap: unset;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 801px) {
     .profile {
         margin: 0 19px 36px;
     }
