--- a/blocks/locations/__elements/location__elements.css
+++ b/blocks/locations/__elements/location__elements.css
@@ -12,7 +12,7 @@
 @media screen and (max-width:1279px) {
     .location__elements {
         grid-template-columns: repeat(2, 282px);
-        justify-items: center;
+        justify-items: space-evenly;
     }
 }
 
