--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,7 @@
     display: block;
     margin: 0;
     padding: 0;
+    padding-top: 20px;
     max-width: 100%;
     font-weight: 500;
     font-size: 2.625em;
