--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -2,8 +2,8 @@
     grid-area: image;
     margin: 0;
     padding: 0;
-    max-width: 282px;
-    height: auto;
+    width: 282px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
