--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,7 +3,7 @@
     padding: 0;
     width: 100%;
     display: grid;
-    grid-template-rows: 1fr fit-content;
+    grid-template-rows: 282px 1fr;
     grid-template-areas:
         "image image"
         "title like";
