--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,8 @@
 .popup__container {
     padding: 0;
     margin: auto;
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
     background-color: #fff;
     border-radius: 10px;
     position: relative;
