--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,6 +3,8 @@
     margin: auto;
     max-width: 430px;
     width: 100%;
+    height: 330px;
+    box-sizing: content-box;
     background-color: #fff;
     border-radius: 10px;
     position: relative;
