--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -2,6 +2,7 @@
     margin: 0 36px 0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 @media screen and (max-width:320px) {
