Добавила скрол и текста ошибки и перенесла index js

--- a/blocks/popup/__error/_visible/popup__error_visible.css
+++ b/blocks/popup/__error/_visible/popup__error_visible.css
@@ -3,5 +3,6 @@
     line-height: 1.25;
     font-weight: 400;
     color:#ff0000;
-    min-height: 15px;
+    white-space: wrap;
+    overflow: scroll;
 }
