--- a/src/blocks/element/__like-button/element__like-button.css
+++ b/src/blocks/element/__like-button/element__like-button.css
@@ -1,6 +1,7 @@
 .element__like-button {
     grid-area: like;
-    margin-right: 21px;
+    margin-right: 23px;
+    margin-top: 10px;
     padding: 0;
     background-image: url(../../../images/like_button.svg);
     width: 22px;
