--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -6,11 +6,11 @@
     grid-column: 1/2;
     border-radius: 50%;
     justify-self: start;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1070px) {
     .profile__avatar {
         align-self: center;
-        margin-bottom: 22px;
     }
 }
