--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__details/profile__details.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__change-avatar-button/profile__change-avatar-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/locations/locations.css);
@@ -16,6 +17,7 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__trash-button/element__trash-button.css);
+@import url(../blocks/element/__counter/element__counter.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
 @import url(../blocks/popup/popup.css);
@@ -23,7 +25,11 @@
 @import url(../blocks/popup/_type_view/popup_type_view.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__container/_image/popup__container_image.css);
+@import url(../blocks/popup/__container/_type_avatar/popup__container_type_avatar.css);
+@import url(../blocks/popup/__container/_type_delete/popup__contaner_type_delete.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_type_avatar/popup__title_type_avatar.css);
+@import url(../blocks/popup/__title/_type_delete/popup__title_type_delete.css);
 @import url(../blocks/popup/__title/_full/popup__title_full.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
@@ -31,6 +37,8 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_type_avatar/popup_save-button_type_avatar.css);
+@import url(../blocks/popup/__save-button/_type_delete/popup_save-button_type_delete.css);
 @import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_visible/popup__error_visible.css);
